--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     const serviceWorkerVersion = "3676490131";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
+  <script src="e-commerce_app/flutter.js" defer></script>
 </head>
 <body>
   <script>
