--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="shop_app">
-  <link rel="apple-touch-icon" href="e-commerce_app/icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="e-commerce_app/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>shop_app</title>
-  <link rel="manifest" href="e-commerce_app/manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = "3676490131";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="e-commerce_app/flutter.js" defer></script>
+  <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
